<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.udacity.project.dividendpayout.app.YearToDateFragment">

    <TextView
        android:id="@+id/yearToDateHeader"
        style="@style/FormLabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ytdHeader"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="0,1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearToDateHeader"
        app:layout_constraintStart_toStartOf="parent">
    <TableRow>
        <TextView
            android:background="@drawable/cellshape"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/ytdDividendsReceived"
            android:contentDescription="@string/ytdDividendsReceived"
            android:textStyle="bold" />

        <TextView
            android:background="@drawable/cellshape_empty"
            android:gravity="center"
            android:padding="3dip"
            android:id="@+id/ytdDivs"
            android:textStyle="bold" />
    </TableRow>
    <TableRow>
        <TextView
            android:background="@drawable/cellshape"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/ytdUnrealizedGainLoss"
            android:contentDescription="@string/ytdUnrealizedGainLoss"
            android:textStyle="bold" />
        <TextView
            android:background="@drawable/cellshape_empty"
            android:gravity="center"
            android:padding="3dip"
            android:id="@+id/unrealizedGainLoss"
            android:textStyle="bold" />
    </TableRow>
     <TableRow>
            <TextView
                android:background="@drawable/cellshape"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/ytdTotalDividendsForYear"
                android:contentDescription="@string/ytdTotalDividendsForYear"
                android:textStyle="bold" />
            <TextView
                android:background="@drawable/cellshape_empty"
                android:gravity="center"
                android:padding="3dip"
                android:id="@+id/totalDivsPredicted"
                android:textStyle="bold" />
     </TableRow>
    </TableLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/advertisement"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adUnitId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>